# website

./: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.traefik.yml  docker-compose.yml  index.html  manifest.webmanifest  pyproject.toml  robots.txt  site.webmanifest  sitemap.xml
assets/bootstrap/css/: bootstrap.min.css
assets/css/: activities.css  archive.css  faq.css  styles.css  team.css  timeline.css  timer.css
assets/html/: activities.html  archive.html  contact.html  diy.html  diy_project_dedicated_page.html  faq.html  freshers.html  learning_path.html  major_projects.html  past_events.html  random_robotics.html  recorded.html  registrations.html  team.html  timeline.html  upcoming_events.html  video.html  virtualbook.html
assets/js/: app.js  particles.json  timeline.js  timer.js
backend/: constants.py  main.py
css/: archive.css  timeline.css  timer.css
html/: archive.html  coming-soon.html  faq.html  past_events.html  random_robotics.html  recorded.html  team.html  timeline.html  upcoming_events.html
js/: archive.js  timeline.js  timer.js
migrations/models/: 0_20220102183747_init.sql  1_20220102212342_update.sql
postgres/: __init__.py  config.py
postgres/models/: __init__.py  mega_project.py
